# profeat2

./: .gitignore  LICENSE  Main.hs  README  README.md  mtbdd.cabal  profeat.cabal  sobdd.cabal  stack.yaml
doc/: conf.py  documentation.html  documentation.md  grammar.ebnf  index.rst  installation.rst  language.rst  properties.rst  usage.rst
doc/language/: blocks.rst  family.rst  features.rst  formulas.rst  globals.rst  init.rst  invariants.rst  labels.rst  rewards.rst
docs/: genindex.html  index.html  installation.html  language.html  objects.inv  properties.html  search.html  searchindex.js  usage.html
docs/_sources/language/: constants.rst.txt  controller.rst.txt  expressions.rst.txt  modules.rst.txt
docs/language/: blocks.html  constants.html  controller.html  expressions.html  family.html  features.html  formulas.html  globals.html  init.html  invariants.html  labels.html  modules.html  rewards.html
mtbdd/: .gitignore  LICENSE  mtbdd.cabal
mtbdd/src/Data/Mtbdd/: Graphviz.hs  Internal.hs  Reorder.hs
profeat/: Main.hs  profeat.cabal
profeat/doc/: documentation.html  documentation.md  tutorial.profeat
profeat/src/: Error.hs  Eval.hs  ProFeat.hs  ProductLine.hs  Result.hs  SrcLoc.hs  SymbolTable.hs  Symbols.hs  Syntax.hs  Template.hs  Translator.hs  Typechecker.hs  Types.hs
profeat/src/Analysis/: InitialState.hs  VarOrdering.hs
profeat/src/Data/Strict/Tuple/: Lens.hs
profeat/src/Parser/: Internal.hs  Results.hs
profeat/src/Syntax/: Util.hs
profeat/src/Translator/: Common.hs  Constraints.hs  Controller.hs  Initial.hs  Invariant.hs  Modules.hs  Names.hs  Properties.hs  Rewards.hs  Seeding.hs
profeat/src/Translator/Seeding/: Bdd.hs  Common.hs  Fd.hs
profeat/src/Types/: Util.hs
profeat/tests/: Tests.hs
profeat/tests/testcases/: Attributes.prism  Attributes.profeat  Blocking.prism  Blocking.profeat  ConstArrays.prism  ConstArrays.profeat  Constants.prism  Controller.profeat  Formulas.prism  Formulas.profeat  Init.prism  Init.profeat  InitConfAuto.prism  InitConfAuto.profeat  InitConfNone.prism  InitConfNone.profeat  InitConfUserDef.prism  InitConfUserDef.profeat  Invariant.prism  Invariant.profeat  Meta.prism  Meta.profeat  PropertyFilter.fprops  PropertyFilter.prism  PropertyFilter.profeat  PropertyFilter.props  PropertyRewards.prism  PropertyRewards.props  PropertySingle.prism  PropertySingle.profeat  PropertySingle.props  Templates.prism  Templates.profeat
qm/: qm.cabal
sobdd/: .gitignore  sobdd.cabal
sobdd/src/Data/Bdd/: Builder.hs  Graphviz.hs
sobdd/tests/: Tests.hs
sobdd/tests/Data/: Proposition.hs
sobdd/tests/Tests/: Instances.hs
src/: Constraint.hs  Error.hs  Eval.hs  FeatureDiagram.hs  FeatureVars.hs  Functions.hs  Parser.hs  ProFeat.hs  ProductLine.hs  Result.hs  SrcLoc.hs  SymbolTable.hs  Symbols.hs  Syntax.hs  Template.hs  Translator.hs  Typechecker.hs  Types.hs  VarOrder.hs
src/Analysis/: VarOrder.hs  VarOrdering.hs
src/Control/Monad/: Either.hs
src/Control/Monad/Either/: Class.hs
src/Data/: Bdd.hs  Mtbdd.hs  VarOrder.hs
src/Data/Bdd/: Builder.hs  Graphviz.hs  Internal.hs
src/Data/Mtbdd/: Builder.hs  Graphviz.hs  Internal.hs  Reorder.hs
src/Data/Mtbdd/Builder/: Internal.hs
src/Data/Strict/Tuple/: Lens.hs
src/Parser/: Internal.hs  Results.hs
src/Result/: Constraint.hs  Csv.hs  Diagram.hs  Mtbdd.hs  Time.hs
src/Syntax/: Operators.hs  Template.hs  Util.hs
src/Translator/: Common.hs  Constraints.hs  Controller.hs  Initial.hs  Modules.hs  Names.hs  Properties.hs  Rewards.hs  Seeding.hs
src/Translator/Seeding/: FeatureDiagram.hs
src/Types/: Util.hs
test/Data/: Proposition.hs  VarOrderSpec.hs
test/Data/Mtbdd/: BuilderSpec.hs  ReorderSpec.hs
tests/: Tests.hs
tests/Data/: Proposition.hs
tests/Tests/: Util.hs
tests/testcases/: Attributes.profeat  Blocking.prism  ConstArrays.prism  Constants.prism  Constants.profeat  Controller.prism  Controller.profeat  DistributionBinom.prism  DistributionBinom.profeat  Formulas.prism  InitConfAuto.prism  InitConfAuto.profeat  InitConfUserDef.prism  InitConfUserDef.profeat  Meta.prism  Meta.profeat  PropertyConditional.fprops  PropertyConditional.prism  PropertyConditional.profeat  PropertyConditional.props  PropertyFilter.prism  PropertyFilter.profeat  PropertyFilter.props  PropertyQuantile.fprops  PropertyQuantile.prism  PropertyQuantile.profeat  PropertyQuantile.props  PropertyRewards.prism  PropertyRewards.profeat  PropertyRewards.props  PropertySingle.prism  PropertySingle.profeat  Templates.prism  Templates.profeat
