name:          mtbdd
version:       0.2.0
synopsis:      Multi-terminal binary decision diagrams
description:   Please see README.md
license:       BSD3
license-file:  LICENSE
author:        Philipp Chrszon
maintainer:    Philipp.Chrszon@tu-dresden.de
copyright:     2016 Philipp Chrszon
category:      Data
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    hashable >= 1.2.4 && < 2,
    mtl >= 2.2.1 && < 3,
    unordered-containers >= 0.2.7 && < 0.3
  exposed-modules:
    Data.Mtbdd
    Data.Mtbdd.Builder
  hs-source-dirs: src
  default-language: Haskell2010

test-suite mtbdd-test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    mtbdd,
    hspec >= 2.2.3 && < 3,
    QuickCheck >= 2.8.2 && < 3
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
