name:          mtbdd
version:       0.20.0
synopsis:      Multi-terminal binary decision diagrams
description:   Please see README.md
license:       BSD3
license-file:  LICENSE
author:        Philipp Chrszon
maintainer:    Philipp.Chrszon@tu-dresden.de
copyright:     2016 Philipp Chrszon
category:      Data
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    containers >= 0.5.6 && < 0.6,
    hashable >= 1.2.4 && < 2,
    mtl >= 2.2.1 && < 3,
    text >= 1.2.2 && < 2,
    unordered-containers >= 0.2.7 && < 0.3,
    vector >= 0.11.0 && < 0.12,
    wl-pprint-text >=1.1
  exposed-modules:
    Data.Mtbdd
    Data.Mtbdd.Builder
    Data.Mtbdd.Builder.Internal
    Data.Mtbdd.Graphviz
    Data.Mtbdd.Internal
    Data.Mtbdd.Reorder
    Data.VarOrder
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

test-suite mtbdd-test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    mtbdd,
    containers >= 0.5.6 && < 0.6,
    hashable >= 1.2.4 && < 2,
    hspec >= 2.2.3 && < 3,
    QuickCheck >= 2.8.2 && < 3,
    vector >= 0.11.0 && < 0.12
  main-is: Spec.hs
  other-modules:
    Data.Mtbdd.BuilderSpec
    Data.Mtbdd.ReorderSpec
    Data.Proposition
    Data.VarOrderSpec
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
