name:                profeat
version:             0.127.1.1
synopsis:            A feature modelling framework
author:              Philipp Chrszon
maintainer:          Philipp.Chrszon@tu-dresden.de
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Analysis.InitialState,
                       Error,
                       Eval,
                       FeatureDiagram,
                       FeatureVars,
                       Functions,
                       Parser,
                       Parser.Internal,
                       Parser.Results,
                       ProductLine,
                       ProFeat,
                       Result,
                       Result.Constraint,
                       Result.Csv,
                       Result.Mtbdd,
                       SrcLoc,
                       Symbols,
                       SymbolTable,
                       Syntax,
                       Syntax.Operators,
                       Syntax.Util,
                       Template,
                       Translator,
                       Translator.Common,
                       Translator.Controller,
                       Translator.Initial,
                       Translator.Invariant,
                       Translator.Modules,
                       Translator.Names,
                       Translator.Properties,
                       Translator.Rewards,
                       Typechecker,
                       Types,
                       Types.Util,
                       VarOrder
  other-modules:       Data.Strict.Tuple.Lens,
                       Paths_profeat
  hs-source-dirs:      src
  build-depends:       base,
                       array,
                       containers,
                       filepath,
                       lens,
                       mtbdd,
                       mtl,
                       optparse-applicative,
                       parsec,
                       process,
                       qm,
                       semigroups,
                       strict,
                       transformers,
                       text,
                       vector,
                       wl-pprint-text
  ghc-options:         -Wall

executable profeat
  main-is:             Main.hs
  build-depends:       base,
                       text,
                       wl-pprint-text,
                       profeat
  ghc-options:         -Wall

test-suite profeat-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:
  hs-source-dirs:      tests
  build-depends:       base,
                       directory,
                       filepath,
                       tasty,
                       tasty-hunit,
                       text,
                       transformers,
                       wl-pprint-text,
                       profeat
