name:                sobdd
version:             0.1.0.0
synopsis:            Shared Ordered Binary Decision Diagrams
license:             BSD3
license-file:        LICENSE
author:              Philipp Chrszon
maintainer:          Philipp.Chrszon@tu-dresden.de
copyright:           2015 Philipp Chrszon
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
  other-modules:
  build-depends:     base >=4.7 && <4.8
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite tests
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  other-modules:
  hs-source-dirs:    tests
  build-depends:     base >=4.7 && <4.8,
                     tasty >=0.10,
                     tasty-hunit >=0.9,
                     sobdd
  default-language:  Haskell2010

