name:                sobdd
version:             0.6.6.0
synopsis:            Shared Ordered Binary Decision Diagrams
license:             BSD3
license-file:        LICENSE
author:              Philipp Chrszon
maintainer:          Philipp.Chrszon@tu-dresden.de
copyright:           2015 Philipp Chrszon
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Data.Bdd,
                     Data.Bdd.Builder,
                     Data.Bdd.Graphviz
  other-modules:     Data.Bdd.Internal
  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5.5,
                     hashable >=1.2.3,
                     mtl >=2.1.3,
                     text >=1.1,
                     unordered-containers >=0.2.5,
                     wl-pprint-text >=1.1
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite tests
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  other-modules:     Data.Proposition,
                     Tests.Instances,
                     Tests.Util
  hs-source-dirs:    tests
  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5.5,
                     QuickCheck >=2.7.6,
                     tasty >=0.10,
                     tasty-quickcheck >=0.8.3,
                     sobdd
  default-language:  Haskell2010
  ghc-options:       -Wall

