name:          mtbdd
version:       0.23.1
synopsis:      Multi-terminal binary decision diagrams
description:   Please see README.md
license:       BSD3
license-file:  LICENSE
author:        Philipp Chrszon
maintainer:    Philipp.Chrszon@tu-dresden.de
copyright:     2016 Philipp Chrszon
category:      Data
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    containers,
    hashable,
    mtl,
    text,
    unordered-containers,
    vector,
    wl-pprint-text
  exposed-modules:
    Data.Mtbdd
    Data.Mtbdd.Builder
    Data.Mtbdd.Builder.Internal
    Data.Mtbdd.Graphviz
    Data.Mtbdd.Internal
    Data.Mtbdd.Reorder
    Data.VarOrder
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

test-suite mtbdd-test
  type: exitcode-stdio-1.0
  build-depends:
    base,
    mtbdd,
    containers,
    hashable,
    hspec,
    QuickCheck,
    vector
  main-is: Spec.hs
  other-modules:
    Data.Mtbdd.BuilderSpec
    Data.Mtbdd.ReorderSpec
    Data.Proposition
    Data.VarOrderSpec
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
